@startuml

title __ORDER's Class Diagram__\n

  namespace com.StockExchangeModel {
    namespace StockExchange {
      namespace Order {
        class com.StockExchangeModel.StockExchange.Order.Order {
            ~ quantity : int
            ~ rate : double
            + Order()
            + Order()
            + Order()
            + getQuantity()
            + getRate()
            + getStock()
            + getTrader()
            + getType()
            + setQuantity()
            + setRate()
            + setTrader()
            + toString()
            + toStringStatus()
        }
        class com.StockExchangeModel.StockExchange.Order.OrderActionHandler {
            + OrderActionHandler()
            + handleAction()
        }
        class com.StockExchangeModel.StockExchange.Order.Transaction {
            + Transaction()
            + execute()
            + getBuyer()
            + getSeller()
            + getTrader()
            + setBuyer()
            + setSeller()
            + setTrader()
            + toString()
        }
        class com.StockExchangeModel.StockExchange.Order.Type {
            + equals()
            + getTypeEnum()
            + getTypeString()
            + hashCode()
            + toString()
            ~ Type()
            ~ Type()
            {static} ~ getStringFromType()
            {static} ~ getTypeFromString()
        }
        enum TypeEnum {
          BUY
          NULL
          SELL
          TRANSACTION
        }
      }
    }
  }


  com.StockExchangeModel.StockExchange.Order.Order o-- com.StockExchangeModel.StockExchange.Company.Stock : stock
  com.StockExchangeModel.StockExchange.Order.Order o-- com.StockExchangeModel.StockExchange.Order.Type : type
  com.StockExchangeModel.StockExchange.Order.Order o-- com.StockExchangeModel.StockExchange.Trader.Trader : trader
  com.StockExchangeModel.StockExchange.Order.OrderActionHandler -up-|> com.StockExchangeModel.StockExchange.Interpreter.ActionHandler
  com.StockExchangeModel.StockExchange.Order.Transaction -up-|> com.StockExchangeModel.StockExchange.Order.Order
  com.StockExchangeModel.StockExchange.Order.Transaction o-- com.StockExchangeModel.StockExchange.Trader.Trader : buyer
  com.StockExchangeModel.StockExchange.Order.Transaction o-- com.StockExchangeModel.StockExchange.Trader.Trader : seller
  com.StockExchangeModel.StockExchange.Order.Type o-- com.StockExchangeModel.StockExchange.Order.Type.TypeEnum : type
  com.StockExchangeModel.StockExchange.Order.Type +-down- com.StockExchangeModel.StockExchange.Order.Type.TypeEnum


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
